--- a/kasa/src/pages/fiche.scss
+++ b/kasa/src/pages/fiche.scss
@@ -24,9 +24,7 @@
         .collapse {
             width: 45%;
         }
-        .content {
-            height: rem(150);
-        }
+
         button, .content {
             width: 100%;
         }
